objects/Grid_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>Grid_ContractAccess__c</fullName>
        <label>Contract Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read/Write</fullName>
                    <default>true</default>
                    <label>Read/Write</label>
                </value>
                <value>
                    <fullName>Read</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grid_ContractNotification__c</fullName>
        <label>ContractNotification</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_CurrencyIsoCode__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eur</fullName>
                    <default>true</default>
                    <label>Eur</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grid_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Grid_ProductHierarchyLevel__c</fullName>
        <label>Product Hierarchy Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_TeamRole__c</fullName>
        <label>Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturing</fullName>
                    <default>true</default>
                    <label>Manufacturing</label>
                </value>
                <value>
                    <fullName>Logistic</fullName>
                </value>
                <value>
                    <fullName>Sap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grid_User__c</fullName>
        <label>User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Configuration</label>
    <pluralLabel>Configurations</pluralLabel>
</CustomObject>